# CICDExample

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: main.yml
scripts/: build.py  clean.py  cmake.py  functions.py  tests.py
src/: main.cpp  main.h
tests/: Main.cpp  tests.cpp
